--- a/css/style.css
+++ b/css/style.css
@@ -134,7 +134,7 @@ nav li:hover{
   gap: 15px;
 }
 
-.container:first-child{
+.container > :first-child{
   grid-column: 1/4;
   background-image: url("header.jpg");
   background-attachment: fixed;
@@ -198,7 +198,7 @@ nav li:hover{
 @media screen and (min-width: 800px){
   nav{
     position: relative;
-    right: auto;
+    text-align: right;
     padding: 30px 0 30px 0;
   }
 
@@ -207,7 +207,7 @@ nav li:hover{
     grid-template-columns: 50px auto 500px 50px;
   }
 
-  .about, .contact, .method-image, .contact-image{
+  .about, .clients, .method-image, .contact-image{
     grid-column: 3/6;
   }
 
