--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ nav li:hover{
 
 .container > :first-child{
   grid-column: 1/4;
-  background-image: url("header.jpg");
+  background-image: url("../images/header.jpg");
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
